2012-09-23 Riccardo Mottola <rm@gnu.org>

	* GRTextEditor.m
	* GRTextEditorView.h
	* GRTextEditorView.m
	Use standard NSFontPanel instead of font pick-list.

2012-09-20 Wolfgang Lux

	* GRDocView.m
	* GRDocView.h
	Fix cursor and tracking rect.

2012-09-20 Riccardo Mottola <rm@gnu.org>

	* GRText.m
	If user action is canceled, do not return an object.

2012-09-16 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m:
	Fix object duplication during drag operation.

2012-09-14 Riccardo Mottola <rm@gnu.org>

	* GRBezierPath.m
	* GRBox.m
	* GRCircle.m
	* GRDocView.m
	* GRDrawableObject.h
	* GRDrawableObject.m
	* GRObjectEditor.m
	* GRText.m
	Unify selection detection to "objectHitForSelection".

2012-09-12 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m
	Improve positioning of 50/100/200 zooming without clicking.

2012-09-12 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m
	* Resources/MainMenu.gorm
	Zoom 50/100/200

2012-09-12 Riccardo Mottola <rm@gnu.org>

	* GRDocView.[h,m]
	Separate zooming from zoom index search in two methods.

2012-09-10 Riccardo Mottola <rm@gnu.org>

	* GRDocView.m
	Implement delete, implement undo for pasteboard operations.

2012-09-10 Riccardo Mottola <rm@gnu.org>

	* GRBox.h
	* GRBox.m
	* GRDrawableObject.h
	* GRDrawableObject.m
	* GRPathObject.h
	* GRPathObject.m
	Init with properties in each parent class, remove plain init for Box.

	* GRCircle.m
	* GRCircle.h
	Init with properties of the parent class.

	* GRBezierPath.h
	* GRBezierPath.m
	Init with properties of the parent class.

2012-09-10 Riccardo Mottola <rm@gnu.org>

	* GRBezierPath.m
	* GRBox.m
	* GRCircle.m
	Take zooming in account for the linewidth only during drawing, without changing the effective linewidth.

2012-09-10 Riccardo Mottola <rm@gnu.org>

	* GRText.m
	Fix missing retains for foreground and stroke colors.

2012-08-27 Riccardo Mottola <rm@gnu.org>

	* GRText.m
	Fix drawing of grid lines when zoomed.

2012-08-27 Riccardo Mottola <rm@gnu.org>

	* GRText.m
	* GRTextEditorView.m